--- a/.github/workflows/deploy_production.yaml
+++ b/.github/workflows/deploy_production.yaml
@@ -18,4 +18,4 @@ jobs:
     - name: Build place file
       run: rojo build -o game.rbxl
     - name: Publish place
-      run: rbxcloud experience publish -f game.rbxl -p env.P_PLACEID -u env.P_GAMEID -t published -a ${{ secrets.API_KEY }}
+      run: rbxcloud experience publish -f game.rbxl -p vars.P_PLACEID -u vars.P_GAMEID -t published -a ${{ secrets.API_KEY }}
